--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	left: 15%;
+	width: 50%;
+	left: 22%;
 	top: 15%;
 }
 
@@ -17,12 +18,9 @@
 	border: 2px solid #1a1a1a;
 	display: flex;
 	flex-direction: row;
-	left: 5%;
-	margin-left: 3rem;
 	margin-bottom: 2rem;
-	padding: 1rem 0 0 1rem;
 	position: relative;
-	width: 80%;
+	width: 100%;
 	background: #f7f7fe;
 }
 
@@ -42,39 +40,10 @@
 	width: 80%;
 }
 
-#name {
-	margin-right: 20px;
-	width: 45%;
-}
-
-#surname {
-	width: 45%;
-}
-
-#email {
+#custom-name-field,
+#custom-surname-field,
+#custom-email-field,
+#custom-message-field {
+	background: #f7f7fe;
 	border: 1px solid #100f10;
-	width: 95%;
-}
-
-#message {
-	border: 1px solid #100f10;
-	width: 95%;
-}
-
-::placeholder {
-	/* Chrome, Firefox, Opera, Safari 10.1+ */
-	color: #100f10;
-	font-weight: 700;
-	padding-left: 20px;
-	opacity: 1; /* Firefox */
-}
-
-:-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
-	color: #100f10;
-}
-
-::-ms-input-placeholder {
-	/* Microsoft Edge */
-	color: #100f10;
 }
