add: add properties from the section-container class

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,7 +1,10 @@
-.section {
+.section-container {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	padding: 25px;
+	position: absolute;
+	left: 15%;
+	top: 15%;
 }
 
 .image-container {
