--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,10 +8,10 @@
 }
 
 .text {
-	font-size: 56px;
+	font-size: 40px;
 	text-align: center;
-	margin-bottom: 25px;
-	margin-top: -10px;
+	margin-bottom: -5px;
+	padding-bottom: 10px;
 }
 
 .icon-container {
