--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -8,10 +8,10 @@
 }
 
 .text {
-	font-size: 40px;
+	font-size: 48px;
 	text-align: center;
-	margin-bottom: -5px;
-	padding-bottom: 10px;
+	margin-top: 30px;
+	margin-bottom: 5px;
 }
 
 .icon-container {
